--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: "" Lato ", sans-serif";
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 16px;
   line-height: 1.7;
   color: black;
